src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMENTARIOS
    COMILLAS
    EOL
    GLOBAL
    RANGE

Grammar

Rule 0     S' -> file
Rule 1     file -> interface_r class classr
Rule 2     interface_r -> INTERFACE CID interface_body interface_r
Rule 3     interface_r -> empty
Rule 4     interface_body -> LLAVEIZQ interface_fun interface_fun_r LLAVEDER
Rule 5     interface_fun -> FUN ID PARIZQ fun2 PARDER COLON
Rule 6     interface_fun_r -> interface_fun interface_fun_r
Rule 7     interface_fun_r -> empty
Rule 8     classr -> class classr
Rule 9     classr -> empty
Rule 10    class -> CLASS CID classparams class2 body
Rule 11    class -> DATA CLASS CID classparams
Rule 12    class2 -> DOSPUNTOS class_extras
Rule 13    class2 -> empty
Rule 14    class_extras -> CID class_extras_2
Rule 15    class_extras_2 -> COMA CID class_extras_2
Rule 16    class_extras_2 -> PARIZQ vars2 PARDER
Rule 17    classparams -> PARIZQ classparams2 PARDER
Rule 18    classparams -> empty
Rule 19    classparams2 -> vars3 tipo ID classparams3
Rule 20    classparams2 -> empty
Rule 21    classparams3 -> COMA vars3 tipo ID classparams3
Rule 22    classparams3 -> empty
Rule 23    varcte -> ID
Rule 24    varcte -> INTNUM
Rule 25    varcte -> FLOATNUM
Rule 26    varcte -> TRUE
Rule 27    varcte -> FALSE
Rule 28    varcte -> STRINGVAL
Rule 29    varcte -> NULL
Rule 30    varcte -> ID CORCHIZQ varcte CORCHDER
Rule 31    varcte -> ID PUNTO ID varcte_param_fun
Rule 32    varcte -> ID PARIZQ llamada_param PARDER
Rule 33    varcte_param_fun -> PARIZQ llamada_param PARDER
Rule 34    varcte_param_fun -> empty
Rule 35    expresion -> megaexp
Rule 36    expresionr -> COMA expresion expresionr
Rule 37    expresionr -> empty
Rule 38    expresion2 -> expresion expresionr
Rule 39    expresion2 -> empty
Rule 40    superexp -> exp oplog
Rule 41    oplog -> MAYORQUE exp
Rule 42    oplog -> MENORQUE exp
Rule 43    oplog -> DIFERENTE exp
Rule 44    oplog -> MAYOROIGUAL exp
Rule 45    oplog -> MENOROIGUAL exp
Rule 46    oplog -> IGUALIGUAL exp
Rule 47    oplog -> empty
Rule 48    megaexp -> superexp megaexpr
Rule 49    megaexpr -> AND superexp megaexpr
Rule 50    megaexpr -> OR superexp megaexpr
Rule 51    megaexpr -> empty
Rule 52    vars -> vars3 tipo vars2 COLON
Rule 53    vars -> vars3 tipo LIST vars2 COLON
Rule 54    varsr -> COMA ID varsr
Rule 55    varsr -> empty
Rule 56    vars2 -> ID varsr
Rule 57    vars3 -> PRIVATE
Rule 58    vars3 -> empty
Rule 59    estatuto -> asignacion estatuto
Rule 60    estatuto -> condicion estatuto
Rule 61    estatuto -> escritura estatuto
Rule 62    estatuto -> for estatuto
Rule 63    estatuto -> while estatuto
Rule 64    estatuto -> when estatuto
Rule 65    estatuto -> llamada estatuto
Rule 66    estatuto -> obj_call estatuto
Rule 67    estatuto -> empty
Rule 68    asignacion -> ID asignacion3 IGUAL asignacion2 COLON
Rule 69    asignacion2 -> expresion
Rule 70    asignacion2 -> CORCHDER expresion asignacion2r CORCHIZQ
Rule 71    asignacion2 -> READ PARIZQ assign_read PARDER
Rule 72    asignacion2 -> CID PARIZQ class_call_args expresionr PARDER
Rule 73    class_call_args -> expresion
Rule 74    class_call_args -> empty
Rule 75    assign_read -> STRINGVAL
Rule 76    assign_read -> empty
Rule 77    asignacion2r -> COMA expresion asignacion2r
Rule 78    asignacion2r -> empty
Rule 79    asignacion3 -> CORCHIZQ expresion CORCHDER
Rule 80    asignacion3 -> PUNTO ID
Rule 81    asignacion3 -> empty
Rule 82    condicion -> IF condicion2 estatutor
Rule 83    condicion2 -> PARIZQ expresion PARDER bloque
Rule 84    condicionr -> ELSE IF condicion2
Rule 85    condicionr -> empty
Rule 86    bloque -> LLAVEIZQ estatuto bloque2 LLAVEDER
Rule 87    bloque2 -> RETURN bloque3
Rule 88    bloque2 -> empty
Rule 89    bloque3 -> expresion COLON
Rule 90    bloque3 -> empty
Rule 91    estatutor -> ELSE bloque
Rule 92    estatutor -> empty
Rule 93    escritura -> WRITE PARIZQ esc1 esc2 PARDER COLON
Rule 94    esc1 -> expresion
Rule 95    esc1 -> STRING
Rule 96    esc2 -> COMA esc1 esc2
Rule 97    esc2 -> empty
Rule 98    tipo -> INT
Rule 99    tipo -> FLOAT
Rule 100   tipo -> BOOL
Rule 101   tipo -> STRING
Rule 102   tipo -> CID
Rule 103   factor -> PARIZQ expresion PARDER
Rule 104   factor -> factor2 varcte
Rule 105   terminor -> POR factor terminor
Rule 106   terminor -> SOBRE factor terminor
Rule 107   terminor -> empty
Rule 108   termino -> factor terminor
Rule 109   exp -> termino expr
Rule 110   expr -> MAS termino expr
Rule 111   expr -> MENOS termino expr
Rule 112   expr -> empty
Rule 113   varcter -> COMA varcte varcter
Rule 114   varcter -> empty
Rule 115   factor2 -> MAS
Rule 116   factor2 -> MENOS
Rule 117   factor2 -> empty
Rule 118   for -> FOR PARIZQ ID IN for2 PARDER bloque
Rule 119   for2 -> ID
Rule 120   for2 -> range
Rule 121   range -> INTNUM PUNTOSRANGO INTNUM
Rule 122   range -> ID PUNTOSRANGO ID
Rule 123   range -> ID PUNTOSRANGO INTNUM
Rule 124   range -> INTNUM PUNTOSRANGO ID
Rule 125   while -> WHILE PARIZQ expresion PARDER bloque
Rule 126   when -> WHEN LLAVEIZQ when2 LLAVEDER
Rule 127   when2 -> expresion FLECHITA bloque when2
Rule 128   when2 -> ELSE FLECHITA bloque
Rule 129   when2 -> empty
Rule 130   fun -> vars3 FUN ID PARIZQ fun2 PARDER fun3 funbody
Rule 131   fun2 -> tipo ID funparamr
Rule 132   fun2 -> empty
Rule 133   funparamr -> COMA tipo ID funparamr
Rule 134   funparamr -> empty
Rule 135   fun3 -> DOSPUNTOS tipo
Rule 136   fun3 -> empty
Rule 137   funbody -> LLAVEIZQ opc1 opc2 bloque2 LLAVEDER
Rule 138   opc1 -> vars multvarsdecl
Rule 139   opc1 -> empty
Rule 140   opc2 -> estatuto
Rule 141   opc2 -> empty
Rule 142   body -> LLAVEIZQ body2 funr body_main LLAVEDER
Rule 143   body -> empty
Rule 144   body_main -> MAIN PARIZQ PARDER mainbloque
Rule 145   body_main -> empty
Rule 146   body2 -> vars multvarsdecl
Rule 147   body2 -> empty
Rule 148   mainbloque -> LLAVEIZQ body2 estatuto LLAVEDER
Rule 149   multvarsdecl -> vars multvarsdecl
Rule 150   multvarsdecl -> empty
Rule 151   funr -> fun funr
Rule 152   funr -> empty
Rule 153   llamada -> ID PARIZQ llamada_param PARDER COLON
Rule 154   llamada -> empty
Rule 155   obj_call -> ID PUNTO ID PARIZQ llamada_param PARDER COLON
Rule 156   obj_call -> empty
Rule 157   llamada_param -> expresion expresionr
Rule 158   llamada_param -> empty
Rule 159   empty -> <empty>

Terminals, with rules where they appear

AND                  : 49
BOOL                 : 100
CID                  : 2 10 11 14 15 72 102
CLASS                : 10 11
COLON                : 5 52 53 68 89 93 153 155
COMA                 : 15 21 36 54 77 96 113 133
COMENTARIOS          : 
COMILLAS             : 
CORCHDER             : 30 70 79
CORCHIZQ             : 30 70 79
DATA                 : 11
DIFERENTE            : 43
DOSPUNTOS            : 12 135
ELSE                 : 84 91 128
EOL                  : 
FALSE                : 27
FLECHITA             : 127 128
FLOAT                : 99
FLOATNUM             : 25
FOR                  : 118
FUN                  : 5 130
GLOBAL               : 
ID                   : 5 19 21 23 30 31 31 32 54 56 68 80 118 119 122 122 123 124 130 131 133 153 155 155
IF                   : 82 84
IGUAL                : 68
IGUALIGUAL           : 46
IN                   : 118
INT                  : 98
INTERFACE            : 2
INTNUM               : 24 121 121 123 124
LIST                 : 53
LLAVEDER             : 4 86 126 137 142 148
LLAVEIZQ             : 4 86 126 137 142 148
MAIN                 : 144
MAS                  : 110 115
MAYOROIGUAL          : 44
MAYORQUE             : 41
MENOROIGUAL          : 45
MENORQUE             : 42
MENOS                : 111 116
NULL                 : 29
OR                   : 50
PARDER               : 5 16 17 32 33 71 72 83 93 103 118 125 130 144 153 155
PARIZQ               : 5 16 17 32 33 71 72 83 93 103 118 125 130 144 153 155
POR                  : 105
PRIVATE              : 57
PUNTO                : 31 80 155
PUNTOSRANGO          : 121 122 123 124
RANGE                : 
READ                 : 71
RETURN               : 87
SOBRE                : 106
STRING               : 95 101
STRINGVAL            : 28 75
TRUE                 : 26
WHEN                 : 126
WHILE                : 125
WRITE                : 93
error                : 

Nonterminals, with rules where they appear

asignacion           : 59
asignacion2          : 68
asignacion2r         : 70 77
asignacion3          : 68
assign_read          : 71
bloque               : 83 91 118 125 127 128
bloque2              : 86 137
bloque3              : 87
body                 : 10
body2                : 142 148
body_main            : 142
class                : 1 8
class2               : 10
class_call_args      : 72
class_extras         : 12
class_extras_2       : 14 15
classparams          : 10 11
classparams2         : 17
classparams3         : 19 21
classr               : 1 8
condicion            : 60
condicion2           : 82 84
condicionr           : 
empty                : 3 7 9 13 18 20 22 34 37 39 47 51 55 58 67 74 76 78 81 85 88 90 92 97 107 112 114 117 129 132 134 136 139 141 143 145 147 150 152 154 156 158
esc1                 : 93 96
esc2                 : 93 96
escritura            : 61
estatuto             : 59 60 61 62 63 64 65 66 86 140 148
estatutor            : 82
exp                  : 40 41 42 43 44 45 46
expr                 : 109 110 111
expresion            : 36 38 69 70 73 77 79 83 89 94 103 125 127 157
expresion2           : 
expresionr           : 36 38 72 157
factor               : 105 106 108
factor2              : 104
file                 : 0
for                  : 62
for2                 : 118
fun                  : 151
fun2                 : 5 130
fun3                 : 130
funbody              : 130
funparamr            : 131 133
funr                 : 142 151
interface_body       : 2
interface_fun        : 4 6
interface_fun_r      : 4 6
interface_r          : 1 2
llamada              : 65
llamada_param        : 32 33 153 155
mainbloque           : 144
megaexp              : 35
megaexpr             : 48 49 50
multvarsdecl         : 138 146 149
obj_call             : 66
opc1                 : 137
opc2                 : 137
oplog                : 40
range                : 120
superexp             : 48 49 50
termino              : 109 110 111
terminor             : 105 106 108
tipo                 : 19 21 52 53 131 133 135
varcte               : 30 104 113
varcte_param_fun     : 31
varcter              : 113
vars                 : 138 146 149
vars2                : 16 52 53
vars3                : 19 21 52 53 130
varsr                : 54 56
when                 : 64
when2                : 126 127
while                : 63

Parsing method: LALR

state 0

    (0) S' -> . file
    (1) file -> . interface_r class classr
    (2) interface_r -> . INTERFACE CID interface_body interface_r
    (3) interface_r -> . empty
    (159) empty -> .

    INTERFACE       shift and go to state 3
    CLASS           reduce using rule 159 (empty -> .)
    DATA            reduce using rule 159 (empty -> .)

    file                           shift and go to state 1
    interface_r                    shift and go to state 2
    empty                          shift and go to state 4

state 1

    (0) S' -> file .



state 2

    (1) file -> interface_r . class classr
    (10) class -> . CLASS CID classparams class2 body
    (11) class -> . DATA CLASS CID classparams

    CLASS           shift and go to state 6
    DATA            shift and go to state 7

    class                          shift and go to state 5

state 3

    (2) interface_r -> INTERFACE . CID interface_body interface_r

    CID             shift and go to state 8


state 4

    (3) interface_r -> empty .

    CLASS           reduce using rule 3 (interface_r -> empty .)
    DATA            reduce using rule 3 (interface_r -> empty .)


state 5

    (1) file -> interface_r class . classr
    (8) classr -> . class classr
    (9) classr -> . empty
    (10) class -> . CLASS CID classparams class2 body
    (11) class -> . DATA CLASS CID classparams
    (159) empty -> .

    CLASS           shift and go to state 6
    DATA            shift and go to state 7
    $end            reduce using rule 159 (empty -> .)

    class                          shift and go to state 9
    classr                         shift and go to state 10
    empty                          shift and go to state 11

state 6

    (10) class -> CLASS . CID classparams class2 body

    CID             shift and go to state 12


state 7

    (11) class -> DATA . CLASS CID classparams

    CLASS           shift and go to state 13


state 8

    (2) interface_r -> INTERFACE CID . interface_body interface_r
    (4) interface_body -> . LLAVEIZQ interface_fun interface_fun_r LLAVEDER

    LLAVEIZQ        shift and go to state 15

    interface_body                 shift and go to state 14

state 9

    (8) classr -> class . classr
    (8) classr -> . class classr
    (9) classr -> . empty
    (10) class -> . CLASS CID classparams class2 body
    (11) class -> . DATA CLASS CID classparams
    (159) empty -> .

    CLASS           shift and go to state 6
    DATA            shift and go to state 7
    $end            reduce using rule 159 (empty -> .)

    class                          shift and go to state 9
    classr                         shift and go to state 16
    empty                          shift and go to state 11

state 10

    (1) file -> interface_r class classr .

    $end            reduce using rule 1 (file -> interface_r class classr .)


state 11

    (9) classr -> empty .

    $end            reduce using rule 9 (classr -> empty .)


state 12

    (10) class -> CLASS CID . classparams class2 body
    (17) classparams -> . PARIZQ classparams2 PARDER
    (18) classparams -> . empty
    (159) empty -> .

    PARIZQ          shift and go to state 18
    DOSPUNTOS       reduce using rule 159 (empty -> .)
    LLAVEIZQ        reduce using rule 159 (empty -> .)
    CLASS           reduce using rule 159 (empty -> .)
    DATA            reduce using rule 159 (empty -> .)
    $end            reduce using rule 159 (empty -> .)

    classparams                    shift and go to state 17
    empty                          shift and go to state 19

state 13

    (11) class -> DATA CLASS . CID classparams

    CID             shift and go to state 20


state 14

    (2) interface_r -> INTERFACE CID interface_body . interface_r
    (2) interface_r -> . INTERFACE CID interface_body interface_r
    (3) interface_r -> . empty
    (159) empty -> .

    INTERFACE       shift and go to state 3
    CLASS           reduce using rule 159 (empty -> .)
    DATA            reduce using rule 159 (empty -> .)

    interface_r                    shift and go to state 21
    empty                          shift and go to state 4

state 15

    (4) interface_body -> LLAVEIZQ . interface_fun interface_fun_r LLAVEDER
    (5) interface_fun -> . FUN ID PARIZQ fun2 PARDER COLON

    FUN             shift and go to state 23

    interface_fun                  shift and go to state 22

state 16

    (8) classr -> class classr .

    $end            reduce using rule 8 (classr -> class classr .)


state 17

    (10) class -> CLASS CID classparams . class2 body
    (12) class2 -> . DOSPUNTOS class_extras
    (13) class2 -> . empty
    (159) empty -> .

    DOSPUNTOS       shift and go to state 25
    LLAVEIZQ        reduce using rule 159 (empty -> .)
    CLASS           reduce using rule 159 (empty -> .)
    DATA            reduce using rule 159 (empty -> .)
    $end            reduce using rule 159 (empty -> .)

    class2                         shift and go to state 24
    empty                          shift and go to state 26

state 18

    (17) classparams -> PARIZQ . classparams2 PARDER
    (19) classparams2 -> . vars3 tipo ID classparams3
    (20) classparams2 -> . empty
    (57) vars3 -> . PRIVATE
    (58) vars3 -> . empty
    (159) empty -> .

    PRIVATE         shift and go to state 30
    PARDER          reduce using rule 159 (empty -> .)
    INT             reduce using rule 159 (empty -> .)
    FLOAT           reduce using rule 159 (empty -> .)
    BOOL            reduce using rule 159 (empty -> .)
    STRING          reduce using rule 159 (empty -> .)
    CID             reduce using rule 159 (empty -> .)

    classparams2                   shift and go to state 27
    vars3                          shift and go to state 28
    empty                          shift and go to state 29

state 19

    (18) classparams -> empty .

    DOSPUNTOS       reduce using rule 18 (classparams -> empty .)
    LLAVEIZQ        reduce using rule 18 (classparams -> empty .)
    CLASS           reduce using rule 18 (classparams -> empty .)
    DATA            reduce using rule 18 (classparams -> empty .)
    $end            reduce using rule 18 (classparams -> empty .)


state 20

    (11) class -> DATA CLASS CID . classparams
    (17) classparams -> . PARIZQ classparams2 PARDER
    (18) classparams -> . empty
    (159) empty -> .

    PARIZQ          shift and go to state 18
    CLASS           reduce using rule 159 (empty -> .)
    DATA            reduce using rule 159 (empty -> .)
    $end            reduce using rule 159 (empty -> .)

    classparams                    shift and go to state 31
    empty                          shift and go to state 19

state 21

    (2) interface_r -> INTERFACE CID interface_body interface_r .

    CLASS           reduce using rule 2 (interface_r -> INTERFACE CID interface_body interface_r .)
    DATA            reduce using rule 2 (interface_r -> INTERFACE CID interface_body interface_r .)


state 22

    (4) interface_body -> LLAVEIZQ interface_fun . interface_fun_r LLAVEDER
    (6) interface_fun_r -> . interface_fun interface_fun_r
    (7) interface_fun_r -> . empty
    (5) interface_fun -> . FUN ID PARIZQ fun2 PARDER COLON
    (159) empty -> .

    FUN             shift and go to state 23
    LLAVEDER        reduce using rule 159 (empty -> .)

    interface_fun                  shift and go to state 32
    interface_fun_r                shift and go to state 33
    empty                          shift and go to state 34

state 23

    (5) interface_fun -> FUN . ID PARIZQ fun2 PARDER COLON

    ID              shift and go to state 35


state 24

    (10) class -> CLASS CID classparams class2 . body
    (142) body -> . LLAVEIZQ body2 funr body_main LLAVEDER
    (143) body -> . empty
    (159) empty -> .

    LLAVEIZQ        shift and go to state 37
    CLASS           reduce using rule 159 (empty -> .)
    DATA            reduce using rule 159 (empty -> .)
    $end            reduce using rule 159 (empty -> .)

    body                           shift and go to state 36
    empty                          shift and go to state 38

state 25

    (12) class2 -> DOSPUNTOS . class_extras
    (14) class_extras -> . CID class_extras_2

    CID             shift and go to state 40

    class_extras                   shift and go to state 39

state 26

    (13) class2 -> empty .

    LLAVEIZQ        reduce using rule 13 (class2 -> empty .)
    CLASS           reduce using rule 13 (class2 -> empty .)
    DATA            reduce using rule 13 (class2 -> empty .)
    $end            reduce using rule 13 (class2 -> empty .)


state 27

    (17) classparams -> PARIZQ classparams2 . PARDER

    PARDER          shift and go to state 41


state 28

    (19) classparams2 -> vars3 . tipo ID classparams3
    (98) tipo -> . INT
    (99) tipo -> . FLOAT
    (100) tipo -> . BOOL
    (101) tipo -> . STRING
    (102) tipo -> . CID

    INT             shift and go to state 43
    FLOAT           shift and go to state 44
    BOOL            shift and go to state 45
    STRING          shift and go to state 46
    CID             shift and go to state 47

    tipo                           shift and go to state 42

state 29

    (20) classparams2 -> empty .
    (58) vars3 -> empty .

    PARDER          reduce using rule 20 (classparams2 -> empty .)
    INT             reduce using rule 58 (vars3 -> empty .)
    FLOAT           reduce using rule 58 (vars3 -> empty .)
    BOOL            reduce using rule 58 (vars3 -> empty .)
    STRING          reduce using rule 58 (vars3 -> empty .)
    CID             reduce using rule 58 (vars3 -> empty .)


state 30

    (57) vars3 -> PRIVATE .

    INT             reduce using rule 57 (vars3 -> PRIVATE .)
    FLOAT           reduce using rule 57 (vars3 -> PRIVATE .)
    BOOL            reduce using rule 57 (vars3 -> PRIVATE .)
    STRING          reduce using rule 57 (vars3 -> PRIVATE .)
    CID             reduce using rule 57 (vars3 -> PRIVATE .)
    FUN             reduce using rule 57 (vars3 -> PRIVATE .)


state 31

    (11) class -> DATA CLASS CID classparams .

    CLASS           reduce using rule 11 (class -> DATA CLASS CID classparams .)
    DATA            reduce using rule 11 (class -> DATA CLASS CID classparams .)
    $end            reduce using rule 11 (class -> DATA CLASS CID classparams .)


state 32

    (6) interface_fun_r -> interface_fun . interface_fun_r
    (6) interface_fun_r -> . interface_fun interface_fun_r
    (7) interface_fun_r -> . empty
    (5) interface_fun -> . FUN ID PARIZQ fun2 PARDER COLON
    (159) empty -> .

    FUN             shift and go to state 23
    LLAVEDER        reduce using rule 159 (empty -> .)

    interface_fun                  shift and go to state 32
    interface_fun_r                shift and go to state 48
    empty                          shift and go to state 34

state 33

    (4) interface_body -> LLAVEIZQ interface_fun interface_fun_r . LLAVEDER

    LLAVEDER        shift and go to state 49


state 34

    (7) interface_fun_r -> empty .

    LLAVEDER        reduce using rule 7 (interface_fun_r -> empty .)


state 35

    (5) interface_fun -> FUN ID . PARIZQ fun2 PARDER COLON

    PARIZQ          shift and go to state 50


state 36

    (10) class -> CLASS CID classparams class2 body .

    CLASS           reduce using rule 10 (class -> CLASS CID classparams class2 body .)
    DATA            reduce using rule 10 (class -> CLASS CID classparams class2 body .)
    $end            reduce using rule 10 (class -> CLASS CID classparams class2 body .)


state 37

    (142) body -> LLAVEIZQ . body2 funr body_main LLAVEDER
    (146) body2 -> . vars multvarsdecl
    (147) body2 -> . empty
    (52) vars -> . vars3 tipo vars2 COLON
    (53) vars -> . vars3 tipo LIST vars2 COLON
    (159) empty -> .
    (57) vars3 -> . PRIVATE
    (58) vars3 -> . empty

  ! shift/reduce conflict for PRIVATE resolved as shift
    MAIN            reduce using rule 159 (empty -> .)
    LLAVEDER        reduce using rule 159 (empty -> .)
    FUN             reduce using rule 159 (empty -> .)
    INT             reduce using rule 159 (empty -> .)
    FLOAT           reduce using rule 159 (empty -> .)
    BOOL            reduce using rule 159 (empty -> .)
    STRING          reduce using rule 159 (empty -> .)
    CID             reduce using rule 159 (empty -> .)
    PRIVATE         shift and go to state 30

  ! PRIVATE         [ reduce using rule 159 (empty -> .) ]

    body2                          shift and go to state 51
    vars                           shift and go to state 52
    empty                          shift and go to state 53
    vars3                          shift and go to state 54

state 38

    (143) body -> empty .

    CLASS           reduce using rule 143 (body -> empty .)
    DATA            reduce using rule 143 (body -> empty .)
    $end            reduce using rule 143 (body -> empty .)


state 39

    (12) class2 -> DOSPUNTOS class_extras .

    LLAVEIZQ        reduce using rule 12 (class2 -> DOSPUNTOS class_extras .)
    CLASS           reduce using rule 12 (class2 -> DOSPUNTOS class_extras .)
    DATA            reduce using rule 12 (class2 -> DOSPUNTOS class_extras .)
    $end            reduce using rule 12 (class2 -> DOSPUNTOS class_extras .)


state 40

    (14) class_extras -> CID . class_extras_2
    (15) class_extras_2 -> . COMA CID class_extras_2
    (16) class_extras_2 -> . PARIZQ vars2 PARDER

    COMA            shift and go to state 56
    PARIZQ          shift and go to state 57

    class_extras_2                 shift and go to state 55

state 41

    (17) classparams -> PARIZQ classparams2 PARDER .

    DOSPUNTOS       reduce using rule 17 (classparams -> PARIZQ classparams2 PARDER .)
    LLAVEIZQ        reduce using rule 17 (classparams -> PARIZQ classparams2 PARDER .)
    CLASS           reduce using rule 17 (classparams -> PARIZQ classparams2 PARDER .)
    DATA            reduce using rule 17 (classparams -> PARIZQ classparams2 PARDER .)
    $end            reduce using rule 17 (classparams -> PARIZQ classparams2 PARDER .)


state 42

    (19) classparams2 -> vars3 tipo . ID classparams3

    ID              shift and go to state 58


state 43

    (98) tipo -> INT .

    ID              reduce using rule 98 (tipo -> INT .)
    LIST            reduce using rule 98 (tipo -> INT .)
    LLAVEIZQ        reduce using rule 98 (tipo -> INT .)


state 44

    (99) tipo -> FLOAT .

    ID              reduce using rule 99 (tipo -> FLOAT .)
    LIST            reduce using rule 99 (tipo -> FLOAT .)
    LLAVEIZQ        reduce using rule 99 (tipo -> FLOAT .)


state 45

    (100) tipo -> BOOL .

    ID              reduce using rule 100 (tipo -> BOOL .)
    LIST            reduce using rule 100 (tipo -> BOOL .)
    LLAVEIZQ        reduce using rule 100 (tipo -> BOOL .)


state 46

    (101) tipo -> STRING .

    ID              reduce using rule 101 (tipo -> STRING .)
    LIST            reduce using rule 101 (tipo -> STRING .)
    LLAVEIZQ        reduce using rule 101 (tipo -> STRING .)


state 47

    (102) tipo -> CID .

    ID              reduce using rule 102 (tipo -> CID .)
    LIST            reduce using rule 102 (tipo -> CID .)
    LLAVEIZQ        reduce using rule 102 (tipo -> CID .)


state 48

    (6) interface_fun_r -> interface_fun interface_fun_r .

    LLAVEDER        reduce using rule 6 (interface_fun_r -> interface_fun interface_fun_r .)


state 49

    (4) interface_body -> LLAVEIZQ interface_fun interface_fun_r LLAVEDER .

    INTERFACE       reduce using rule 4 (interface_body -> LLAVEIZQ interface_fun interface_fun_r LLAVEDER .)
    CLASS           reduce using rule 4 (interface_body -> LLAVEIZQ interface_fun interface_fun_r LLAVEDER .)
    DATA            reduce using rule 4 (interface_body -> LLAVEIZQ interface_fun interface_fun_r LLAVEDER .)


state 50

    (5) interface_fun -> FUN ID PARIZQ . fun2 PARDER COLON
    (131) fun2 -> . tipo ID funparamr
    (132) fun2 -> . empty
    (98) tipo -> . INT
    (99) tipo -> . FLOAT
    (100) tipo -> . BOOL
    (101) tipo -> . STRING
    (102) tipo -> . CID
    (159) empty -> .

    INT             shift and go to state 43
    FLOAT           shift and go to state 44
    BOOL            shift and go to state 45
    STRING          shift and go to state 46
    CID             shift and go to state 47
    PARDER          reduce using rule 159 (empty -> .)

    fun2                           shift and go to state 59
    tipo                           shift and go to state 60
    empty                          shift and go to state 61

state 51

    (142) body -> LLAVEIZQ body2 . funr body_main LLAVEDER
    (151) funr -> . fun funr
    (152) funr -> . empty
    (130) fun -> . vars3 FUN ID PARIZQ fun2 PARDER fun3 funbody
    (159) empty -> .
    (57) vars3 -> . PRIVATE
    (58) vars3 -> . empty

    MAIN            reduce using rule 159 (empty -> .)
    LLAVEDER        reduce using rule 159 (empty -> .)
    FUN             reduce using rule 159 (empty -> .)
    PRIVATE         shift and go to state 30

    funr                           shift and go to state 62
    fun                            shift and go to state 63
    empty                          shift and go to state 64
    vars3                          shift and go to state 65

state 52

    (146) body2 -> vars . multvarsdecl
    (149) multvarsdecl -> . vars multvarsdecl
    (150) multvarsdecl -> . empty
    (52) vars -> . vars3 tipo vars2 COLON
    (53) vars -> . vars3 tipo LIST vars2 COLON
    (159) empty -> .
    (57) vars3 -> . PRIVATE
    (58) vars3 -> . empty

  ! shift/reduce conflict for PRIVATE resolved as shift
    MAIN            reduce using rule 159 (empty -> .)
    LLAVEDER        reduce using rule 159 (empty -> .)
    FUN             reduce using rule 159 (empty -> .)
    ID              reduce using rule 159 (empty -> .)
    IF              reduce using rule 159 (empty -> .)
    WRITE           reduce using rule 159 (empty -> .)
    FOR             reduce using rule 159 (empty -> .)
    WHILE           reduce using rule 159 (empty -> .)
    WHEN            reduce using rule 159 (empty -> .)
    INT             reduce using rule 159 (empty -> .)
    FLOAT           reduce using rule 159 (empty -> .)
    BOOL            reduce using rule 159 (empty -> .)
    STRING          reduce using rule 159 (empty -> .)
    CID             reduce using rule 159 (empty -> .)
    PRIVATE         shift and go to state 30

  ! PRIVATE         [ reduce using rule 159 (empty -> .) ]

    vars                           shift and go to state 66
    multvarsdecl                   shift and go to state 67
    empty                          shift and go to state 68
    vars3                          shift and go to state 54

state 53

    (147) body2 -> empty .
    (58) vars3 -> empty .

    PRIVATE         reduce using rule 147 (body2 -> empty .)
    MAIN            reduce using rule 147 (body2 -> empty .)
    LLAVEDER        reduce using rule 147 (body2 -> empty .)
    FUN             reduce using rule 147 (body2 -> empty .)
    ID              reduce using rule 147 (body2 -> empty .)
    IF              reduce using rule 147 (body2 -> empty .)
    WRITE           reduce using rule 147 (body2 -> empty .)
    FOR             reduce using rule 147 (body2 -> empty .)
    WHILE           reduce using rule 147 (body2 -> empty .)
    WHEN            reduce using rule 147 (body2 -> empty .)
    INT             reduce using rule 58 (vars3 -> empty .)
    FLOAT           reduce using rule 58 (vars3 -> empty .)
    BOOL            reduce using rule 58 (vars3 -> empty .)
    STRING          reduce using rule 58 (vars3 -> empty .)
    CID             reduce using rule 58 (vars3 -> empty .)


state 54

    (52) vars -> vars3 . tipo vars2 COLON
    (53) vars -> vars3 . tipo LIST vars2 COLON
    (98) tipo -> . INT
    (99) tipo -> . FLOAT
    (100) tipo -> . BOOL
    (101) tipo -> . STRING
    (102) tipo -> . CID

    INT             shift and go to state 43
    FLOAT           shift and go to state 44
    BOOL            shift and go to state 45
    STRING          shift and go to state 46
    CID             shift and go to state 47

    tipo                           shift and go to state 69

state 55

    (14) class_extras -> CID class_extras_2 .

    LLAVEIZQ        reduce using rule 14 (class_extras -> CID class_extras_2 .)
    CLASS           reduce using rule 14 (class_extras -> CID class_extras_2 .)
    DATA            reduce using rule 14 (class_extras -> CID class_extras_2 .)
    $end            reduce using rule 14 (class_extras -> CID class_extras_2 .)


state 56

    (15) class_extras_2 -> COMA . CID class_extras_2

    CID             shift and go to state 70


state 57

    (16) class_extras_2 -> PARIZQ . vars2 PARDER
    (56) vars2 -> . ID varsr

    ID              shift and go to state 72

    vars2                          shift and go to state 71

state 58

    (19) classparams2 -> vars3 tipo ID . classparams3
    (21) classparams3 -> . COMA vars3 tipo ID classparams3
    (22) classparams3 -> . empty
    (159) empty -> .

    COMA            shift and go to state 74
    PARDER          reduce using rule 159 (empty -> .)

    classparams3                   shift and go to state 73
    empty                          shift and go to state 75

state 59

    (5) interface_fun -> FUN ID PARIZQ fun2 . PARDER COLON

    PARDER          shift and go to state 76


state 60

    (131) fun2 -> tipo . ID funparamr

    ID              shift and go to state 77


state 61

    (132) fun2 -> empty .

    PARDER          reduce using rule 132 (fun2 -> empty .)


state 62

    (142) body -> LLAVEIZQ body2 funr . body_main LLAVEDER
    (144) body_main -> . MAIN PARIZQ PARDER mainbloque
    (145) body_main -> . empty
    (159) empty -> .

    MAIN            shift and go to state 79
    LLAVEDER        reduce using rule 159 (empty -> .)

    body_main                      shift and go to state 78
    empty                          shift and go to state 80

state 63

    (151) funr -> fun . funr
    (151) funr -> . fun funr
    (152) funr -> . empty
    (130) fun -> . vars3 FUN ID PARIZQ fun2 PARDER fun3 funbody
    (159) empty -> .
    (57) vars3 -> . PRIVATE
    (58) vars3 -> . empty

    MAIN            reduce using rule 159 (empty -> .)
    LLAVEDER        reduce using rule 159 (empty -> .)
    FUN             reduce using rule 159 (empty -> .)
    PRIVATE         shift and go to state 30

    fun                            shift and go to state 63
    funr                           shift and go to state 81
    empty                          shift and go to state 64
    vars3                          shift and go to state 65

state 64

    (152) funr -> empty .
    (58) vars3 -> empty .
